# ElysiaAI

./: .env.example  .gitignore  README.md  frontend.py  pyproject.toml  requirements.txt  vercel.json
backend/: ai_agent.py  config.py  helpers.py
src/: ai_agent.py  config.py  main.py  prompts.py  tools.py
src/knowledge_base/: embedding.py  pdf_loader.py  pinecone_provider.py  prompt_generator.py
