[tool.fastapi]
app = "src.main:app"
[project]
name = "elysiaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.9.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface>=1.0.1",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "pypdf>=6.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
